[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fade.tscn" type="PackedScene" id=1]
[ext_resource path="res://level_select.gd" type="Script" id=2]
[ext_resource path="res://load_scene_button.gd" type="Script" id=3]
[ext_resource path="res://fonts/fffforwa_24.tres" type="DynamicFont" id=5]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButtons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -160.0
margin_right = 300.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1Button" type="Button" parent="LevelButtons"]
margin_left = 168.0
margin_right = 296.0
margin_bottom = 320.0
rect_min_size = Vector2( 128, 16 )
flat = true
script = ExtResource( 3 )
scene_to_load = "res://Level1.tscn"

[node name="Label" type="Label" parent="LevelButtons/Level1Button"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.603922, 1, 0.721569, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2Button" type="Button" parent="LevelButtons"]
margin_left = 304.0
margin_right = 432.0
margin_bottom = 320.0
rect_min_size = Vector2( 128, 16 )
flat = true
script = ExtResource( 3 )
scene_to_load = "res://LevelSelect.tscn"

[node name="Label" type="Label" parent="LevelButtons/Level2Button"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.603922, 1, 0.721569, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" parent="." instance=ExtResource( 1 )]
visible = false
[connection signal="fade_in_finished" from="Fade" to="." method="_on_Fade_fade_in_finished"]
[connection signal="fade_out_finished" from="Fade" to="." method="_on_Fade_fade_out_finished"]
